--- a/css/main.css
+++ b/css/main.css
@@ -368,60 +368,106 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-  .menu-container,
   .burger-btn {
     display: none;
   }
 }
 
-.menu {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .burger-btn {
+  background: transparent;
   border: none;
   padding: 0;
-  background-color: transparent;
   width: 40px;
   height: 40px;
-  margin-left: auto;
   cursor: pointer;
 }
 
+.mobile-container {
+  position: relative;
+  padding-left: 40px;
+  padding-top: 48px;
+}
+
 .mobile-menu {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
+  z-index: 100;
+  overflow: scroll;
+  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu__close-btn {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  background: transparent;
+  border: none;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.mobile-menu__close-icon {
+  width: 20px;
+  height: 25px;
+  fill: #000000;
+}
+
+.mobile-nav-list {
+  margin-bottom: 300px;
+}
+
+.mobile-nav-list-item {
+  margin-bottom: 32px;
+}
+
+.mobile-nav-list-link {
   text-decoration: none;
   color: #000000;
   font-size: 40px;
   line-height: 1.18;
   letter-spacing: 0.02em;
-  margin-bottom: 32px;
 }
 
-.mobile-menu:hover, .mobile-menu:focus, .mobile-menu:active, .mobile-menu.current {
+.mobile-nav-list-link:hover, .mobile-nav-list-link:focus, .mobile-nav-list-link:active, .mobile-nav-list-link.current {
   color: var(--accent-color);
 }
 
-.mobile-menu-list {
-  margin-bottom: 150px;
+.mobile-contacts-list {
+  margin-bottom: 64px;
 }
 
-.mobile-contact__link-tel {
+.mobile-contacts-list-item {
+  margin-bottom: 32px;
+}
+
+.mobile-contacts-list-link-tel {
   font-size: 34px;
   line-height: 40px;
   letter-spacing: 0.02em;
   color: var(--accent-color);
   text-decoration: none;
-  margin-bottom: 32px;
 }
 
-.mobile-contact__link-tel:hover, .mobile-contact__link-tel:focus, .mobile-contact__link-tel:active, .mobile-contact__link-tel.current {
+.mobile-contacts-list-link-tel:hover, .mobile-contacts-list-link-tel:focus, .mobile-contacts-list-link-tel:active, .mobile-contacts-list-link-tel.current {
   color: var(--primary-text-color);
 }
 
-.mobile-contact__link-mail {
+.mobile-contacts-list-link-email {
   font-size: 24px;
   line-height: 1.16;
   letter-spacing: 0.02em;
@@ -429,22 +475,16 @@ body {
   text-decoration: none;
 }
 
-.mobile-contact__link-mail:hover, .mobile-contact__link-mail:focus, .mobile-contact__link-mail:active, .mobile-contact__link-mail.current {
+.mobile-contacts-list-link-email:hover, .mobile-contacts-list-link-email:focus, .mobile-contacts-list-link-email:active, .mobile-contacts-list-link-email.current {
   color: var(--accent-color);
 }
 
-.mobile-social {
+.mobile-social-list {
   display: flex;
-  margin-right: 20px;
-  align-items: bottom;
-  justify-content: space-between;
+  padding-bottom: 48px;
 }
 
-.mobile-contacts {
-  margin-bottom: 64px;
-}
-
-.mobile-social__link {
+.mobile-social-list-link {
   font-size: 18px;
   line-height: 1.22;
   letter-spacing: 0.02em;
@@ -452,53 +492,25 @@ body {
   text-decoration: none;
 }
 
-.mobile-social__link:hover, .mobile-social__link:focus, .mobile-social__link:active, .mobile-social__link.current {
+.mobile-social-list-link:hover, .mobile-social-list-link:focus, .mobile-social-list-link:active, .mobile-social-list-link.current {
   color: var(--primary-text-color);
 }
 
-.menu-toggle {
-  display: flex;
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  padding: 0;
-  border-radius: 50%;
-  background: #ffffff;
-  border: transparent;
-  width: 30px;
-  height: 30px;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.mobile-social-list-item {
+  margin-right: 10px;
+  padding-right: 10px;
 }
 
-.menu-toggle:focus, .menu-toggle:active, .menu-toggle:hover {
-  fill: var(--accent-color);
+.mobile-social-list-item:not(:last-child) {
+  margin-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 32px;
-  background: #ffffff;
-  z-index: 100;
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
-}
-
-.menu-container.is-open {
-  transform: translateX(0);
-}
-
-.menu-container .menu-toggle {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  color: #fff;
+@media screen and (max-width: 768px) {
+  .header-container {
+    justify-content: space-between;
+    padding: 10px;
+  }
 }
 
 @media screen and (max-width: 767px) {
